Show twilio number on index

--- a/templates/index.html
+++ b/templates/index.html
@@ -6,6 +6,7 @@
   <div class="starter-template">
     <h1>Welcome, {{g.user.number}}.</h1>
     <p class="lead">Your key is {{g.user.key|string}}.</p>
+    <p class="lead">Your number to text is {{twilio_number}}.</p>
   </div>
 
 
